Terraform/Terraform_module/aws/modules/vpc/sg.tf
# Alb Security Group
resource "aws_security_group" "alb-ecs_sg" {
    name        = "alb-ecs_sg"
    description = "alb sg for ecs"
    vpc_id      = "${aws_vpc.traffic-vpc.id}"

    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        ipv6_cidr_blocks = ["::/0"]
    }

    ingress {
        from_port       = 443
        to_port         = 443
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }


    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }

}

# Ecs Security Group When Start Service
resource "aws_security_group" "ecs-sg" {
    name        = "ecs-sg"
    description = "sg-for-ecs"
    vpc_id      = "${aws_vpc.traffic-vpc.id}"
    depends_on = [aws_security_group.alb-ecs_sg]

    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        ipv6_cidr_blocks = ["::/0"]
    }
    ingress {
        from_port       = 80
        to_port         = 80
        protocol        = "tcp"
        security_groups = [ aws_security_group.alb-ecs_sg.id ]
        self            = false
    }


    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }

}


# Aurora DB SG
resource "aws_security_group" "db-security" {
    name        = "db-security"
    description = "db-security"
    vpc_id      = "${aws_vpc.traffic-vpc.id}"
    depends_on = [aws_security_group.ecs-sg]


    ingress {
        from_port       = 3306
        to_port         = 3306
        protocol        = "tcp"
        security_groups = [ aws_security_group.ecs-sg.id ]
        self            = false
    }


    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }

}
